# hailo_ros

./: README.md
.cache/clangd/index/: AI_Inferencer.hpp.7AFA9798215982EF.idx  YOLOInferencer.cpp.6D77F445697D2B71.idx  YOLOInferencer.hpp.F74410074B468F99.idx  abi_macros.hpp.00524EFAC65F923A.idx  adl_serializer.hpp.BED570C32CC16029.idx  begin.hpp.AED081509B3F2BAA.idx  binary_reader.hpp.BEAAF2228E3162A2.idx  binary_writer.hpp.16A37E1D5761B45D.idx  byte_container_with_subtype.hpp.3D02BF2E0C3FF33F.idx  camera_test.cpp.5C3F1560B78E8E40.idx  cpp_future.hpp.290BB706CC823A90.idx  detected.hpp.1A34E45EF1B9DD8A.idx  end.hpp.26B97BB789A7C6D7.idx  exceptions.hpp.26BB77552ECB1CC7.idx  feedback_based.cpp.AD34D46B53D16418.idx  from_json.hpp.97CE5A4EE2096876.idx  go2_ai_controller.cpp.EDBDA3485B42BCE5.idx  go2_stream_viewer.cpp.886487CD990E812F.idx  go2_vision_node.cpp.8907F8F331C36B32.idx  hailo_subscriber.cpp.35FCEAAC140D5289.idx  hash.hpp.B4D6956B2B0A0A34.idx  hedley.hpp.D4C22BA493B6DEC9.idx  hedley_undef.hpp.E4ECF4A9EC259B94.idx  identity_tag.hpp.F9B1FD034CBC2CDA.idx  input_adapters.hpp.33A9AEF111EBE684.idx  internal_iterator.hpp.0BF0C3A592CEE8F3.idx  is_sax.hpp.172210212D5833EB.idx  iter_impl.hpp.42E19AD6294FFEB1.idx  iteration_proxy.hpp.29E524A199C405A3.idx  iterator_traits.hpp.FF36591983383E3E.idx  json.hpp.E78D232BD6EF0183.idx  json_custom_base_class.hpp.54E23C638B6A7EDD.idx  json_fwd.hpp.5D19553489F32A44.idx  json_pointer.hpp.523158141162C5BE.idx  json_ref.hpp.F78800DDC2482D25.idx  json_reverse_iterator.hpp.08CE3AB4690F0A2C.idx  json_sax.hpp.D046F13ABFB53195.idx  lexer.hpp.2EE7BA76CC48C6D7.idx  macro_scope.hpp.35A0FFDA244B92EA.idx  macro_unscope.hpp.5EB8A21338939A0C.idx  (+19 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hailo_robot_control/lib/hailo_robot_control/: go2_stream_viewer  go2_vision_node  hailo_detection.py
install/hailo_robot_control/share/ament_index/resource_index/package_run_dependencies/: hailo_robot_control
install/hailo_robot_control/share/ament_index/resource_index/parent_prefix_path/: hailo_robot_control
install/hailo_robot_control/share/hailo_robot_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/hailo_robot_control/: CMakeLists.txt  package.xml
src/hailo_robot_control/include/common/: ros2_robot_state_client.h  ros2_sport_client.h
src/hailo_robot_control/src/: AI_Inferencer.hpp  YOLOInferencer.cpp  YOLOInferencer.hpp  camera_test.cpp  feedback_based.cpp  go2_ai_controller.cpp  go2_stream_viewer.cpp  go2_vision_node.cpp  hailo_detection.cpp  hailo_subscriber.cpp  practice.cpp  state_machine_test.cpp
src/hailo_robot_control/unitree_go2_vision_msgs/: CMakeLists.txt  package.xml
src/hailo_robot_control/unitree_go2_vision_msgs/msg/: Detection.msg
